Fixed broken UI in IE, profile details career info

--- a/app/assets/stylesheets/module/_profile-details.scss
+++ b/app/assets/stylesheets/module/_profile-details.scss
@@ -181,6 +181,8 @@
       font-size: rem(14.7);
       margin-bottom: 0;
       padding: rem(10) 0;
+      line-height: rem(17);
+      font-style: normal;
       @include flex();
       @extend %text-uppercase;
       @extend %brandon-grotesque-bold;
@@ -238,11 +240,11 @@
   @extend %float-left;
 }
 
-.profile-info-txt {
-  line-height: rem(17);
-  font-style: normal;
+// .profile-info-txt {
+//   line-height: rem(17);
+//   font-style: normal;
   
-}
+// }
 
 .i-profile-pause {
   transform: initial;
